--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     Javascript
     -->
     <script type="text/javascript" src="js/routing.js"></script>
-    <script type="text/javascript" src="js/welcome.js"></script>
+
 
 
 </head>
@@ -36,8 +36,13 @@
 
     <!--Body content-->
     <div id="content">
+	
+		<h1>Map</h1>
+	
+		<div id="#map"></div>
+	
+	
     </div>
-
 
 </div>
 
