--- a/welcome.html
+++ b/welcome.html
@@ -4,6 +4,13 @@
         <p align="center">
             Hello!
         </p>
+		
+		<p>Map</p>
+		
+		<div id="map"></div>	
+		
+		
+		
       </div> <!-- end of footer -->
     </div> <!-- end of container -->
 </div>
