Added first call to dataset.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!--
     Javascript
     -->
+    <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/routing.js"></script>
 
 
