--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     Javascript
     -->
     <script type="text/javascript" src="js/data.js"></script>
+    <script type="text/javascript" src="js/autocomplete.js"></script>
     <script type="text/javascript" src="js/routing.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
 
@@ -74,6 +75,17 @@
 	
 		<div id="map"></div>
 		
+	    <input type="text" class="span3" style="margin: 0 auto;" data-provide="typeahead" data-items="4" data-source='["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Dakota","North Carolina","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"]'>
+
+        <div class="autocomplete-cities">
+            <input class="typeahead" type="text" placeholder="Ville">
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 
 </div>
