--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		  navigator.geolocation.getCurrentPosition(function(position)
 		  {
 			loc = position.coords.latitude + "," +position.coords.longitude;
-			$("input#gps").val(loc);
+			$("#gps").val(loc);
 		  });
 		}
 		else
@@ -65,7 +65,7 @@
 				locateStart(loc);
 				//appel fonction recup de data
 				t=loc.split(",");
-				get_data(t[0], t[1], 100000, 10, visu_map);
+				get_data(t[0], t[1], $("#distance").val(), 10, visu_map);
 			});
 		});
 	</script>	
@@ -82,9 +82,11 @@
 	
 		<h1>Map</h1>
 	
-		<input type="text" id="ville" placeholder="Entrez une ville..." />
+		<input type="text" name="ville" id="ville" placeholder="Entrez une ville..." />
 		
-		<input type="text" id="gps" placeholder="Coordonnées GPS" />
+		<input type="text" name="gps" id="gps" placeholder="Coordonnées GPS" />
+		
+		<input type="text" name="distance" id="distance" value="1000" />
 	
 		<a href="#" id="go">Go !</a>
 	
