Added code for itinerary computation.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				t=loc.split(",");
 				//get_data(t[0], t[1], $("#distance").val(), 100, visu_map);
 				get_data(t[0], t[1], $("#distance").val(), 10, visu_map);
+				get_itinerary(48.843716, 2.3171895, t[0], t[1], visu_map_itinerary);
 			});
 		});
 	</script>	
