--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="js/jquery.qtip-1.0.0-rc3.min.js"></script>
     <script type="text/javascript" src="js/path.js"></script>
     <script type="text/javascript" src="js/mustache.js"></script>
-	<script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>	
+	<script src="js/leaflet.js"></script>	
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-typeahead.js"></script>
     <script src="js/hogan.js"></script>
@@ -52,6 +52,18 @@
 			locateStart(loc);
 			t=loc.split(",");
 			get_data(t[0], t[1], distance, nb_res, visu_map);		
+	
+			//get_itinerary(48.843716, 2.3171895, t[0], t[1], visu_map_itinerary);
+            a0 = load_osm_data(t[0], t[1], 'amenity', 'police');
+            a1 = load_osm_data(t[0], t[1], 'tourism', 'museum');
+            a1 = load_osm_data(t[0], t[1], 'tourism', 'attraction');
+
+            $.when( a0, a1 ).then(function(data, textStatus, jqXHR){
+                console.log('Done with OSM');
+                console.log(JSON.stringify(pois_danger, null, 2));
+                danger_around(t[0], t[1]);
+            });
+
 			
 		}
 
