--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				globalWarnings.clearLayers();
 				map.closePopup();
 				map.setView(mapCenter, zoom);
-				$("section#content nav").show();
+				$("section#content nav#nav-1").show();
 				$("div#newLoc").hide();
 			});
 			
