--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
 		<p><em>L’objectif était pour les 10 équipes en compétition,  de fabriquer, à partir des données et documents mis à disposition, des prototypes d’applications numériques et de contenus interactifs permettant de mieux partager la vision de l’aménagement régional et de booster l’agilité de la métropole francilienne pour préparer 2030.</em></p>
 
-		<p>Notre équipe, les nettoyeurs, a detourné et utilisé les données du SDRIF et ses visions d’aménagement, pour aider les franciliens à se sortir de situations délicates, comme se debarasser d’un corps...</p>
+		<p>Notre équipe, les nettoyeurs, a detourné et utilisé les données du SDRIF et ses visions d’aménagement, pour aider les franciliens à se sortir de situations délicates, comme se débarasser d’un corps...</p>
 
 		<div class="evoAbout">
 			Pour suivre le projet et son évolution, ou nous contacter merci d’utiliser Twitter <a href="http://twitter.com/BrigandFuT">@BrigandFuT</a>
@@ -244,10 +244,10 @@
 			#designer #graphiste / <a href="mailto:jessicoolka@gmail.com">jessicoolka@gmail.com</a>
 			<br />
 			<span>Nicolas Fonty</span>
-			#architecte #urbaniste / <a href="mailto:fonty.nicolas@gmail.com">fonty.nicolas@gmail.com</a>
+			#architecte #urbaniste / <a href="http://fonty.nicolas.free.fr" target="_blank">http://fonty.nicolas.free.fr</a>
 			<br />
 			<span>Emmanuel Goossaert</span>
-			#developpeur / <a href="mailto:emmanuel.goossaert@gmail.com">emmanuel.goossaert@gmail.com</a>
+			#developpeur / <a href="http://goossaert.com" target="_blank">http://goossaert.com</a>
 			<br />
 			<span>Alexis Kovalenko</span>
 			#developpeur / <a href="mailto:alexis.kovalenko@gmail.com">alexis.kovalenko@gmail.com</a>
