ajout d'une scroll bar dans la about box
+ cleaning de fichiers inutiles

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-typeahead.js"></script>
     <script src="js/hogan.js"></script>
+	<script src="js/jquery.slimscroll.min.js"></script>
 
     <!--
     Javascript
@@ -156,7 +157,13 @@
 				$("div#newLoc").hide();
 				$("div#menu").hide();
 				$("div#about").show();
-			});		
+			});
+
+			var aboutH=$(window).height() - (215);
+			$("#about").height(aboutH+"px");
+			$('#containerAbout').slimScroll({
+				height: aboutH+"px"
+			});
 		});
 	</script>	
 
@@ -227,33 +234,35 @@
 	</div>
 	
 	<div id="about">
-		<h2>Brigand Futé est un projet d’appli web réalisé en 48h, à l’occasion du <a href="http://hackathon.iledefrance2030.fr">Hack Data Week End IDF 2030</a></h2>
+		<div id="containerAbout">
+			<h2>Brigand Futé est un projet d’appli web réalisé en 48h, à l’occasion du <a href="http://hackathon.iledefrance2030.fr">Hack Data Week End IDF 2030</a></h2>
 
-		<p><em>L’objectif était pour les 10 équipes en compétition,  de fabriquer, à partir des données et documents mis à disposition, des prototypes d’applications numériques et de contenus interactifs permettant de mieux partager la vision de l’aménagement régional et de booster l’agilité de la métropole francilienne pour préparer 2030.</em></p>
+			<p><em>L’objectif était pour les 10 équipes en compétition,  de fabriquer, à partir des données et documents mis à disposition, des prototypes d’applications numériques et de contenus interactifs permettant de mieux partager la vision de l’aménagement régional et de booster l’agilité de la métropole francilienne pour préparer 2030.</em></p>
 
-		<p>Notre équipe, les nettoyeurs, a detourné et utilisé les données du SDRIF et ses visions d’aménagement, pour aider les franciliens à se sortir de situations délicates, comme se débarasser d’un corps...</p>
+			<p>Notre équipe, les nettoyeurs, a detourné et utilisé les données du SDRIF et ses visions d’aménagement, pour aider les franciliens à se sortir de situations délicates, comme se débarasser d’un corps...</p>
 
-		<div class="evoAbout">
-			Pour suivre le projet et son évolution, ou nous contacter merci d’utiliser Twitter <a href="http://twitter.com/BrigandFuT">@BrigandFuT</a>
-		</div>
+			<div class="evoAbout">
+				Pour suivre le projet et son évolution, ou nous contacter merci d’utiliser Twitter <a href="http://twitter.com/BrigandFuT">@BrigandFuT</a>
+			</div>
 
-		<h2>Les Nettoyeurs ont remporté le premier prix du hackathon !</h2>
+			<h2>Les Nettoyeurs ont remporté le premier prix du hackathon !</h2>
 
-		<div class="contactAbout">
-			<span>Jessica Zheng</span>
-			#designer #graphiste / <a href="mailto:jessicoolka@gmail.com">jessicoolka@gmail.com</a>
-			<br />
-			<span>Nicolas Fonty</span>
-			#architecte #urbaniste / <a href="http://fonty.nicolas.free.fr" target="_blank">http://fonty.nicolas.free.fr</a>
-			<br />
-			<span>Emmanuel Goossaert</span>
-			#developpeur / <a href="http://goossaert.com" target="_blank">http://goossaert.com</a>
-			<br />
-			<span>Alexis Kovalenko</span>
-			#developpeur / <a href="mailto:alexis.kovalenko@gmail.com">alexis.kovalenko@gmail.com</a>
-			<br />
-			<span>Benjamin Collignon</span>
-			#designer #graphiste / <a href="mailto:benjamin.etco@gmail.com">benjamin.etco@gmail.com</a>
+			<div class="contactAbout">
+				<span>Jessica Zheng</span>
+				#designer #graphiste / <a href="mailto:jessicoolka@gmail.com">jessicoolka@gmail.com</a>
+				<br />
+				<span>Nicolas Fonty</span>
+				#architecte #urbaniste / <a href="http://fonty.nicolas.free.fr" target="_blank">http://fonty.nicolas.free.fr</a>
+				<br />
+				<span>Emmanuel Goossaert</span>
+				#developpeur / <a href="http://goossaert.com" target="_blank">http://goossaert.com</a>
+				<br />
+				<span>Alexis Kovalenko</span>
+				#developpeur / <a href="mailto:alexis.kovalenko@gmail.com">alexis.kovalenko@gmail.com</a>
+				<br />
+				<span>Benjamin Collignon</span>
+				#designer #graphiste / <a href="mailto:benjamin.etco@gmail.com">benjamin.etco@gmail.com</a>
+			</div>
 		</div>
 	</div>	
 	
